--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css"/>
   <link rel="stylesheet" href="./css/main.css">
   <title>Team</title>
 </head>
@@ -164,27 +166,63 @@
               </div>
             </div>
           </li>
+          <li class="suggestion__item">
+            <div class="suggestion__item-inner">
+              <p class="suggestion__desc">
+                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+              </p>
+            </div>
+            <div class="suggestion__user">
+              <div class="suggestion__user-name">
+                <strong class="suggestion__name">Vijay Sankara</strong>
+                <span class="suggestion__company">CEO at mdeon</span>
+              </div>
+            </div>
+          </li>
+          <li class="suggestion__item">
+            <div class="suggestion__item-inner">
+              <p class="suggestion__desc">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+            </div>
+            <div class="suggestion__user suggestion__user-jenny">
+              <div class="suggestion__user-name">
+                <strong class="suggestion__name">Jenny Wilson</strong>
+                <span class="suggestion__company">CEO at GE</span>
+              </div>
+            </div>
+          </li>
+          <li class="suggestion__item">
+            <div class="suggestion__item-inner">
+              <p class="suggestion__desc">
+                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+              </p>
+            </div>
+            <div class="suggestion__user suggestion__user-kristin">
+              <div class="suggestion__user-name">
+                <strong class="suggestion__name">Kristin Watson</strong>
+                <span class="suggestion__company">Engineer at ficco</span>
+              </div>
+            </div>
+          </li>
         </ul>
-        <div class="suggestion__btn-wrapper">
-          <button class="suggestion__btn" type="button"><svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M25.8849 12.2588H6.33735L14.8774 3.71877C15.5599 3.03627 15.5599 1.91627 14.8774 1.23377C14.5504 0.906081 14.1065 0.721924 13.6436 0.721924C13.1807 0.721924 12.7368 0.906081 12.4099 1.23377L0.877354 12.7663C0.194854 13.4488 0.194854 14.5513 0.877354 15.2338L12.4099 26.7663C13.0924 27.4488 14.1949 27.4488 14.8774 26.7663C15.5599 26.0838 15.5599 24.9813 14.8774 24.2988L6.33735 15.7588H25.8849C26.8474 15.7588 27.6349 14.9713 27.6349 14.0088C27.6349 13.0463 26.8474 12.2588 25.8849 12.2588Z" fill="#0BCBFF"/>
-          </svg>
-        </button>
-        <button class="suggestion__btn" type="button">
-          <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M2.11548 15.75H21.663L13.123 24.29C12.4405 24.9725 12.4405 26.0925 13.123 26.775C13.8055 27.4575 14.908 27.4575 15.5905 26.775L27.123 15.2425C27.8055 14.56 27.8055 13.4575 27.123 12.775L15.608 1.22498C15.281 0.897292 14.8371 0.713135 14.3742 0.713135C13.9113 0.713135 13.4674 0.897292 13.1405 1.22498C12.458 1.90748 12.458 3.00998 13.1405 3.69248L21.663 12.25H2.11548C1.15298 12.25 0.365479 13.0375 0.365479 14C0.365479 14.9625 1.15298 15.75 2.11548 15.75Z" fill="#0BCBFF"/>
-          </svg>
-        </button>
       </div>
-    </div>
-  </section>
-  <!-- Section suggestion finished -->
-</main>
-<!-- Site main end -->
-<footer class="site-footer">
-  <div class="site-footer__inner">
+    </section>
+    <!-- Section suggestion finished -->
     
-  </div>
-</footer>
+  </main>
+  <!-- Site main end -->
+  <footer class="site-footer">
+    <div class="site-footer__inner">
+      
+    </div>
+  </footer>
+  
+  
+  
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
