complate all divisions

--- a/index.html
+++ b/index.html
@@ -213,8 +213,78 @@
   </main>
   <!-- Site main end -->
   <footer class="site-footer">
-    <div class="site-footer__inner">
-      
+    <div class="container">
+      <div class="site-footer__inner">
+        <div class="site-footer__logo-wrapper">
+          <a class="logo" href="./index.html">
+            <img class="logo__img" src="./images/logo.svg"
+            width="68"
+            height="20"
+            alt="Team Website's logo">
+          </a>
+          <p class="site-footer__desc">
+            Collaboration platforms for modern teams
+          </p>
+        </div>
+        <div class="site-footer__company">
+          <strong class="site-footer__significant">Company</strong>
+          <ul class="site-footer__list">
+            <li class="site-footer__item">
+              <a class="site-footer__link" href="#">Product</a>
+            </li>
+            <li class="site-footer__item">
+              <a class="site-footer__link" href="#">Blog</a>
+            </li>
+            <li class="site-footer__item">
+              <a class="site-footer__link" href="#">Support</a>
+            </li>
+          </ul>
+        </div>
+        <div class="site-footer__features">
+          <strong class="site-footer__significant">Features</strong>
+          <ul class="site-footer__list">
+            <li class="site-footer__item">
+              <a class="site-footer__link" href="#">Screen Sharing</a>
+            </li>
+            <li class="site-footer__item">
+              <a class="site-footer__link" href="#">iOS & Android Apps</a>
+            </li>
+            <li class="site-footer__item">
+              <a class="site-footer__link" href="#">File Sharing</a>
+            </li>
+            <li class="site-footer__item">
+              <a class="site-footer__link" href="#">User Management</a>
+            </li>
+          </ul>
+        </div>
+        <address class="site-footer__contact">
+          <strong class="site-footer__significant">Contact</strong>
+          <ul class="site-footer__list">
+            <li class="site-footer__item">
+              <a class="site-footer__link" href="mailto:info@teamapp.com">info@teamapp.com</a>
+            </li>
+            <li class="site-footer__item">
+              <a class="site-footer__link" href="tel:+1188112122">1-188-112-122</a>
+            </li>
+            <li class="site-footer__item">
+              <a class="site-footer__link" href="https://yandex.uz/maps/-/CDT4Msq">123-A sector 22A GA</a>
+            </li>
+          </ul>
+        </address>
+        <div class="site-footer__date">
+          <strong class="site-footer__significant">Stay up to date</strong>
+          <span class="site-footer__extra">Subscribe to our newsletter</span>
+          <form class="site-footer__form" action="POST">
+            <input class="site-footer__input" type="email" minlength="2" maxlength="50" placeholder="Email" aria-label="Enter your email" required>
+            <button class="site-footer__btn" type="submit">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.81323 13.4999H18.5682L11.2482 20.8199C10.6632 21.4049 10.6632 22.3649 11.2482 22.9499C11.8332 23.5349 12.7782 23.5349 13.3632 22.9499L23.2482 13.0649C23.8332 12.4799 23.8332 11.5349 23.2482 10.9499L13.3782 1.04993C13.098 0.769055 12.7175 0.611206 12.3207 0.611206C11.924 0.611206 11.5435 0.769055 11.2632 1.04993C10.6782 1.63493 10.6782 2.57993 11.2632 3.16493L18.5682 10.4999H1.81323C0.988232 10.4999 0.313232 11.1749 0.313232 11.9999C0.313232 12.8249 0.988232 13.4999 1.81323 13.4999Z" fill="white" fill-opacity="0.2"/>
+              </svg>
+            </button>
+          </form>
+        </div>
+      </div>
+      <span class="site-footer__copyright">© Copyright TEAM Inc.</span>
     </div>
   </footer>
   
